filtered representing from representative